<resources>
    <string name="app_name">EmojiView</string>
    <string name="welcomeToMaqsad">Welcome to Maqsad.</string>
    <string name="maqsadIntro">Maqsad is an educational app that delivers high quality academic lectures.</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="allCourses">All Courses</string>
    <string name="recentlyWatched">Recently Watched</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="inviteFriendsTo">Invite friends to</string>
    <string name="home">Home</string>
    <string name="streaks">Streaks</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resume">Resume</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
</resources>